--- a/QuotePage/QuotePage.html
+++ b/QuotePage/QuotePage.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>QuotePage</title>
+    <link rel="stylesheet" type="text/css" href="css.css">
+
   </head>
   <body>
+
     <script src="QuotePage.js" type="text/javascript"></script>
   </body>
 </html>
