--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Object Oriented JavaScript Examples</title>
-    <link rel="stylesheet" type="text/css" href="DropDownMenu.css">
+    <title>JavaScript Learning Page</title>
+    <link rel="stylesheet" type="text/css" href="Css/DropDownMenu.css">
+    <link rel="stylesheet" type="text/css" href="Css/general.css">
   </head>
 
   <body>
-    <p id="p1">This is JavaScript console learning</p>
-    <script src="index.js" type="text/javascript"></script>
-    <script src="Button.js" type="text/javascript"></script>
-    <script src="simpleList.js" type="text/javascript"></script>
-    <script src="dropDownMenu.js" type="text/javascript"></script>
+    <p id="p1">This is JavaScript generated page</p>
+    <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/Button.js" type="text/javascript"></script>
+    <script src="js/simpleList.js" type="text/javascript"></script>
+    <script src="js/dropDownMenu.js" type="text/javascript"></script>
   </body>
 </html>
