--- a/PassTheMessage/index.html
+++ b/PassTheMessage/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Message Page</title>
-    <!-- <link rel="stylesheet" type="text/css" href="css.css"> -->
+    <link rel="stylesheet" type="text/css" href="simpleStyle.css">
   </head>
   <body>
 
